# learning-algorithms

./: .gitignore  chapter_2_analyzing_algorithms.ipynb  chapter_2_exercises.ipynb  mojoproject.toml  pixi.toml  pyproject.toml
Chapter 1/: exercises.ipynb  lesson.ipynb
Chapter 3/: exercises.ipynb  lesson.ipynb
mojo/: exercise_1.ipynb
notebooks/: chapter_3_better_living_through_better_hashing.ipynb
python/: exercise_1.ipynb  file.mojo  lesson_1.ipynb
